--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,5 +1,7 @@
 * {
   box-sizing: border-box;
+  font-family: 'Noto Sans KR', 'Arial Bold', 'Helvetica Neue', Helvetica, Arial,
+    Dotum, 국어, Gulim, sans-serif;
 }
 
 body {
