--- a/src/pages/ProductList/ProductList.scss
+++ b/src/pages/ProductList/ProductList.scss
@@ -1,5 +1,7 @@
-@import '../../styles/mixin.scss';
-
 .productList {
-  @include productListAlign;
+  width: 1200px;
+  padding: 0px 30px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
