MODIFY: Footer 링크삭제

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,7 +2,7 @@
   width: 100%;
   padding: 30px 20px;
   background-color: black;
-  color: white;
+  color: #777;
 
   .wrapperBox {
     width: 100%;
