--- a/src/pages/Signup/User/User.scss
+++ b/src/pages/Signup/User/User.scss
@@ -10,41 +10,42 @@
     text-align: center;
     font-size: 30px;
     font-weight: 500;
+    line-height: 50px;
   }
 
-  .uniForm {
+  .userForm {
     display: block;
-  }
 
-  input {
-    width: 100%;
-    display: block;
-    padding: 20px 16px 20px 12px;
-    border: 1px solid $btnColor;
-    border-radius: 9px;
-    font-size: 16px;
-  }
+    input {
+      width: 100%;
+      display: block;
+      padding: 20px 16px 20px 12px;
+      border: 1px solid $btnColor;
+      border-radius: 9px;
+      font-size: 16px;
+    }
 
-  .firstInput {
-    margin-bottom: 15px;
-  }
+    .firstInput {
+      margin-bottom: 15px;
+    }
 
-  .agree {
-    margin: 0 auto;
-    padding: 40px 0px;
-    font-size: 16px;
-    color: $fontGrey;
-    line-height: 30px;
-    width: 65%;
-  }
+    .agree {
+      margin: 0 auto;
+      padding: 40px 0px;
+      font-size: 16px;
+      color: $fontGrey;
+      line-height: 30px;
+      width: 65%;
+    }
 
-  button {
-    width: 100%;
-    padding: 20px 16px 20px 12px;
-    background-color: $btnColor;
-    color: white;
-    border: 0px;
-    border-radius: 50px;
-    font-size: 16px;
+    button {
+      width: 100%;
+      padding: 20px 16px 20px 12px;
+      background-color: $btnColor;
+      color: white;
+      border: 0px;
+      border-radius: 50px;
+      font-size: 16px;
+    }
   }
 }
