--- a/src/pages/ProductList/ProductList.scss
+++ b/src/pages/ProductList/ProductList.scss
@@ -1,7 +1,11 @@
 .productList {
-  width: 1200px;
-  padding: 0px 30px;
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+
+  .listAlign {
+    width: 1200px;
+    padding: 0px 30px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
 }
