Modify: Signup/Login 기능 구현완료

--- a/src/pages/Signup/User/User.scss
+++ b/src/pages/Signup/User/User.scss
@@ -38,11 +38,23 @@
       width: 65%;
     }
 
-    button {
+    .loginBtn {
       width: 100%;
       padding: 20px 16px 20px 12px;
       background-color: $btnColor;
       color: white;
+      opacity: 0.3;
+      border: 0px;
+      border-radius: 50px;
+      font-size: 16px;
+    }
+
+    .loginBtnActive {
+      width: 100%;
+      padding: 20px 16px 20px 12px;
+      background-color: $btnColor;
+      color: white;
+      opacity: 1;
       border: 0px;
       border-radius: 50px;
       font-size: 16px;
