Modify:멘토님 리뷰 반영 수정

--- a/src/components/AsideMenu/AsideMenu.scss
+++ b/src/components/AsideMenu/AsideMenu.scss
@@ -1,9 +1,7 @@
-.asideMenu {
+.sideMenu {
   margin-left: 20px;
-
   width: 240px;
   max-height: 300px;
-
   overflow-y: auto;
 
   .borderBottom {
