--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -5,11 +5,13 @@
   @include productBoxSize;
 
   .imgBox {
-    @include productImgSize;
-    border: 1px solid black;
+    @include productImgBoxSize;
+    border: 1px solid $btnColor;
+    overflow: hidden;
 
     .img {
-      width: 100%;
+      height: 100%;
+      object-position: -25px;
     }
   }
 
