--- a/src/components/Nav/Sideoption/Search/Search.scss
+++ b/src/components/Nav/Sideoption/Search/Search.scss
@@ -1,21 +1,34 @@
 .searchSection {
   display: flex;
-
   align-items: center;
 }
 
 .dropdownSection {
   position: absolute;
+  top: 0;
   left: 0;
   width: 100vw;
   height: 500px;
   background-color: aqua;
 
   .searchHeader {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 60px;
-    left: 0;
     background-color: orange;
-    z-index: 1;
+
+    .searchInput {
+      width: 50%;
+      height: 60%;
+    }
+  }
+
+  .searchBody {
+    width: 100%;
+    height: 80%;
+    top: 60px;
+    background-color: tan;
   }
 }
