Add: 전체 레이아웃 1차 수정

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,6 +1,6 @@
 .footer {
   width: 100%;
-  padding: 30px 20px;
+  padding: 30px 350px;
   background-color: black;
   color: #777;
 
@@ -32,8 +32,24 @@
 }
 
 .icons {
+  width: 200px;
   display: flex;
+  justify-content: space-between;
   border-radius: 50%;
+
+  li {
+    width: 30px;
+    height: 30px;
+    opacity: 0.5;
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+
+  img {
+    width: 100%;
+  }
 }
 
 address {
@@ -47,20 +63,28 @@ address {
     display: flex;
     justify-content: space-between;
 
-    .copyright {
-      margin-left: 20px;
-      color: #777;
-    }
+    // .location {
+    //   width: 30px;
+    //   height: 30px;
+
+    //   img {
+    //     width: 100%;
+    //   }
   }
 
-  .info {
-    width: 150px;
-    display: flex;
-    justify-content: space-between;
+  .copyright {
+    margin-left: 20px;
+    color: #777;
+  }
+}
 
-    span {
-      color: #777;
-    }
+.info {
+  width: 150px;
+  display: flex;
+  justify-content: space-between;
+
+  span {
+    color: #777;
   }
 }
 
