--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -3,13 +3,15 @@
 
 .product {
   @include productBoxSize;
+  padding: 0px 50px;
 
   .imgBox {
     @include productImgSize;
-    border: 1px solid black;
+    overflow: hidden;
 
     .img {
-      width: 100%;
+      height: 100%;
+      object-position: -50px;
     }
   }
 
