Add: 결제창 레이아웃 구현

--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -13,3 +13,21 @@
   font-weight: 700;
   color: $btnColor;
 }
+
+@mixin inputStyle {
+  display: block;
+  padding: 20px 16px 20px 12px;
+  border: 1px solid $btnColor;
+  border-radius: 9px;
+  font-size: 16px;
+}
+
+@mixin btnStyle {
+  padding: 20px 16px 20px 12px;
+  background-color: $btnColor;
+  color: white;
+  opacity: 0.3;
+  border: 0px;
+  border-radius: 50px;
+  font-size: 16px;
+}
