--- a/src/pages/DrawPage/Drawpage.scss
+++ b/src/pages/DrawPage/Drawpage.scss
@@ -32,3 +32,13 @@
   background-color: red;
   opacity: 0.1;
 }
+
+.drawModal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 600px;
+  height: 600px;
+  background-color: gray;
+}
