Modify : modal 추가

--- a/src/pages/DrawPage/Drawpage.scss
+++ b/src/pages/DrawPage/Drawpage.scss
@@ -29,8 +29,7 @@
 
 .dummy {
   height: 200vh;
-  background-color: red;
-  opacity: 0.1;
+  background-color: rgb(189, 128, 128);
 }
 
 .drawModal {
