--- a/src/components/Nav/Sideoption/Search/Search.scss
+++ b/src/components/Nav/Sideoption/Search/Search.scss
@@ -26,9 +26,40 @@
   }
 
   .searchBody {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     width: 100%;
     height: 80%;
     top: 60px;
     background-color: tan;
+
+    .title {
+      width: 10%;
+      height: 80%;
+      background-color: brown;
+    }
+    .content {
+      width: 80%;
+      height: 80%;
+      background-color: brown;
+      overflow: auto;
+      white-space: nowrap;
+
+      .searchResult {
+        display: inline-block;
+        margin-top: 30px;
+        margin-left: 40px;
+        width: 200px;
+        height: 260px;
+        background-color: aliceblue;
+
+        .searchImg {
+          margin: 0;
+          width: 100%;
+          height: 70%;
+        }
+      }
+    }
   }
 }
