Modify : scroll Event 구현중

--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -1,3 +1,8 @@
+.firstPage {
+  height: 100vh;
+  background-color: burlywood;
+}
+
 .content {
   height: 100vh;
   background-color: rgb(97, 97, 63);
