--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -3,6 +3,10 @@
   background-color: burlywood;
 }
 
+.scrollSection {
+  height: 100vh;
+  overflow-y: hidden;
+}
 .content {
   height: 100vh;
   background-color: rgb(97, 97, 63);
