--- a/src/components/Nav/Dropdown/Dropdown.scss
+++ b/src/components/Nav/Dropdown/Dropdown.scss
@@ -1,11 +1,18 @@
 .dropDown {
   position: absolute;
   display: flex;
-  top: 60px;
   left: 0px;
   width: 100%;
   height: 300px;
   background-color: blue;
+  transform: translateY(0);
+  transition: transform 0.3s;
+}
+
+.dropDownHidden {
+  position: absolute;
+  visibility: hidden;
+  transform: translateY(-300px);
 }
 
 .loopSection {
