--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   height: 60px;
-  background-color: orange;
+  background-color: white;
 
   .logo {
     margin-left: 30px;
@@ -15,7 +15,7 @@
   width: 40%;
   height: 60px;
   margin-left: 10%;
-  background-color: green;
+  background-color: white;
 
   .navList {
     display: flex;
@@ -38,7 +38,7 @@
 .sideOption {
   display: flex;
   align-content: space-between;
-  background-color: red;
+  background-color: white;
   margin-right: 30px;
 
   img {
