--- a/src/components/Nav/Sideoption/Search/Search.scss
+++ b/src/components/Nav/Sideoption/Search/Search.scss
@@ -9,7 +9,7 @@
   left: 0;
   width: 100vw;
   height: 500px;
-  background-color: aqua;
+  transition: 0.2s;
 
   .searchHeader {
     display: flex;
@@ -17,11 +17,15 @@
     justify-content: center;
     width: 100%;
     height: 60px;
-    background-color: orange;
+    background-color: white;
 
     .searchInput {
+      padding-left: 20px;
       width: 50%;
-      height: 60%;
+      height: 70%;
+      border: none;
+      border-radius: 20px;
+      background-color: #eee;
     }
   }
 
@@ -32,17 +36,19 @@
     width: 100%;
     height: 80%;
     top: 60px;
-    background-color: tan;
+    background-color: white;
 
     .title {
+      display: flex;
+      justify-content: center;
       width: 10%;
       height: 80%;
-      background-color: brown;
+      font-size: 30px;
     }
     .content {
       width: 80%;
       height: 80%;
-      background-color: brown;
+      font-size: 30px;
       overflow: auto;
       white-space: nowrap;
 
