ADD:장바구니, 위시리스트 레이아웃 추가

--- a/src/pages/Cart/OrderHistory/OrderHistory.scss
+++ b/src/pages/Cart/OrderHistory/OrderHistory.scss
@@ -1,8 +1,8 @@
-@import '../../styles/variables.scss';
+@import '../../../styles/variables.scss';
 
 .orderHistory {
-  width: 20vm;
-  margin-top: 40px;
+  width: 350px;
+  margin-top: 60px;
 
   .text {
     margin-top: 20px;
