--- a/src/pages/Cart/Cart/Cart.scss
+++ b/src/pages/Cart/Cart/Cart.scss
@@ -1,8 +1,9 @@
+@import '../../../styles/variables.scss';
 .cart {
   justify-content: space-between;
   display: flex;
 
-  width: 80vw;
+  width: 1500px;
   margin: auto;
   .cartAndWish {
     flex-direction: column;
@@ -16,7 +17,6 @@
       margin: auto;
 
       .cartItemContainer {
-        width: 40vw;
         margin: 40px;
 
         .cartTitle {
@@ -26,7 +26,21 @@
     }
 
     .wishList {
-      width: 40vw;
+      width: 1200px;
+      margin: 40px;
+
+      .underLine {
+        margin-top: 30px;
+        border-bottom: 2px solid $fontGrey;
+      }
+
+      .wishListLink {
+        margin-top: 30px;
+        text-decoration: underline;
+      }
+    }
+
+    .moreProduct {
       margin: 40px;
     }
   }
