draw product dropdown 수정

--- a/src/components/Nav/Dropdown/Dropdown.scss
+++ b/src/components/Nav/Dropdown/Dropdown.scss
@@ -62,7 +62,7 @@
   top: 50%;
   left: 30%;
   border: none;
-  background-color: white;
+  background-color: transparent;
 
   img {
     width: 30px;
@@ -74,7 +74,7 @@
   top: 50%;
   right: 30%;
   border: none;
-  background-color: white;
+  background-color: transparent;
 
   img {
     width: 30px;
