--- a/src/components/Nav/Dropdown/Snkrsdrop.scss
+++ b/src/components/Nav/Dropdown/Snkrsdrop.scss
@@ -1,9 +1,21 @@
 .snkrsDrop {
   position: absolute;
   display: flex;
+  justify-content: center;
+  align-items: center;
   top: 60px;
   left: 0px;
   width: 100%;
   height: 300px;
-  background-color: white;
+  background-color: #ccc;
+}
+
+.snkrsList {
+  display: flex;
+  width: 80%;
+  height: 80%;
+  background-color: #ddd;
+  overflow: scroll;
+  overflow: auto;
+  white-space: nowrap;
 }
