--- a/src/pages/ProductDetail/ProductDetail.scss
+++ b/src/pages/ProductDetail/ProductDetail.scss
@@ -1,38 +1,58 @@
-.drawPage {
+.productDetail {
   position: relative;
-}
-.container {
-  display: flex;
-  height: 200vh;
-  background-color: rgb(174, 174, 174);
-  .imgSection {
-    width: 70%;
+
+  .container {
+    display: flex;
+    justify-content: center;
     height: 200vh;
-    background-color: cadetblue;
-  }
-  .stickySection {
-    width: 30%;
-    background-color: aquamarine;
-    .productExplain {
-      position: sticky;
-      top: 0;
-      margin-top: 50%;
-      width: 100%;
-      height: 50vh;
-      background-color: deepskyblue;
+
+    .imgSection {
+      width: 60%;
+      height: 100vh;
+
+      .imgBox {
+        width: 100%;
+
+        li {
+          width: 90%;
+          height: 300px;
+          margin: 30px 20px;
+          border: 1px solid black;
+
+          img {
+            width: 100%;
+          }
+        }
+      }
+    }
+
+    .stickySection {
+      width: 30%;
+      padding: 30px 0px;
+      background-color: aquamarine;
+
+      .productExplain {
+        position: sticky;
+        top: 0;
+        margin-top: 50%;
+        width: 100%;
+        height: 50vh;
+        background-color: deepskyblue;
+      }
     }
   }
-}
-.dummy {
-  height: 200vh;
-  background-color: rgb(189, 128, 128);
-}
-.drawModal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 600px;
-  height: 600px;
-  background-color: gray;
+
+  .dummy {
+    height: 200vh;
+    background-color: rgb(189, 128, 128);
+    .drawModal {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 600px;
+      height: 600px;
+      background-color: gray;
+    }
+  }
 }
