--- a/src/pages/ProductDetail/ProductDetail.scss
+++ b/src/pages/ProductDetail/ProductDetail.scss
@@ -29,7 +29,29 @@
     .stickySection {
       width: 30%;
       padding: 30px 0px;
-      background-color: aquamarine;
+
+      h1 {
+        font-size: 30px;
+        margin-bottom: 10px;
+      }
+
+      h2 {
+        font-size: 24px;
+        font-weight: 400;
+        margin-bottom: 25px;
+      }
+
+      p {
+        font-size: 20px;
+        font-weight: 400;
+        margin: 25px 0px;
+      }
+
+      .stickyImg {
+        width: 200px;
+        height: 100px;
+        border: 1px solid black;
+      }
 
       .productExplain {
         position: sticky;
