--- a/src/pages/ProductDetail/ProductDetail.scss
+++ b/src/pages/ProductDetail/ProductDetail.scss
@@ -1,10 +1,13 @@
+@import '../../styles/variables.scss';
+@import '../../styles/mixin.scss';
+
 .productDetail {
   position: relative;
 
   .container {
     display: flex;
     justify-content: center;
-    height: 200vh;
+    height: 150vh;
 
     .imgSection {
       width: 60%;
@@ -15,7 +18,7 @@
 
         li {
           width: 90%;
-          height: 450px;
+          height: 370px;
           margin: 30px 30px;
           border: 1px solid black;
 
@@ -27,7 +30,7 @@
     }
 
     .stickySection {
-      width: 30%;
+      width: 25%;
       padding: 30px 0px;
 
       h1 {
@@ -41,25 +44,49 @@
         margin-bottom: 25px;
       }
 
-      p {
-        font-size: 20px;
-        font-weight: 400;
-        margin: 25px 0px;
-      }
-
       .stickyImg {
         width: 200px;
         height: 100px;
         border: 1px solid black;
       }
 
+      p {
+        font-size: 20px;
+        font-weight: 400;
+        margin: 25px 0px;
+      }
+
+      .review {
+        padding: 10px;
+
+        li {
+          padding-top: 15px;
+        }
+      }
+
+      .gotoCart,
+      .gotoWishList {
+        width: 100%;
+        @include btnStyle;
+        margin-bottom: 15px;
+
+        &:hover {
+          opacity: 1;
+        }
+      }
+
       .productExplain {
         position: sticky;
-        top: 0;
-        margin-top: 50%;
+        top: 30px;
+        margin-top: 5%;
         width: 100%;
         height: 50vh;
-        background-color: deepskyblue;
+
+        p {
+          font-size: 16px;
+          padding: 0px 10px;
+          line-height: 28px;
+        }
       }
     }
   }
@@ -67,14 +94,15 @@
   .dummy {
     height: 200vh;
     background-color: rgb(189, 128, 128);
-    .drawModal {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 600px;
-      height: 600px;
-      background-color: gray;
-    }
+  }
+
+  .drawModal {
+    padding: 30px 20px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 20px;
+    box-shadow: 4px 4px 6px rgba(117, 117, 117, 0.5);
   }
 }
