--- a/src/components/Wish/Wish.scss
+++ b/src/components/Wish/Wish.scss
@@ -1,12 +1,10 @@
 .wish {
   width: 400px;
   height: 400px;
-
   margin-bottom: 50px;
 
   .imgBox {
     height: 300px;
-
     background-color: black;
   }
 
@@ -30,15 +28,12 @@
     }
 
     .sizeBtn {
-      width: 126px;
-      height: 50px;
-
+      padding: 8px 24px;
       border-radius: 20px;
-
       background-color: #ffffff;
       color: #111111;
 
-      &.falseBtn {
+      &.deactive {
         opacity: 1;
       }
     }
