--- a/src/pages/ProductDetail/ProductDetail.scss
+++ b/src/pages/ProductDetail/ProductDetail.scss
@@ -18,7 +18,7 @@
 
         li {
           width: 90%;
-          height: 370px;
+          height: 400px;
           margin: 30px 30px;
           border: 1px solid black;
 
@@ -30,37 +30,46 @@
     }
 
     .stickySection {
-      width: 25%;
       padding: 30px 0px;
+      width: 25%;
 
       h1 {
-        font-size: 30px;
         margin-bottom: 10px;
+        font-size: 28px;
       }
 
       h2 {
-        font-size: 24px;
+        color: $fontGrey;
+        margin-bottom: 10px 0px 25px 0px;
+        font-size: 20px;
         font-weight: 400;
-        margin-bottom: 25px;
-      }
-
-      .stickyImg {
-        width: 200px;
-        height: 100px;
-        border: 1px solid black;
       }
 
       p {
-        font-size: 20px;
+        font-size: 18px;
         font-weight: 400;
         margin: 25px 0px;
       }
 
+      .sizeBtn {
+        font-size: 16px;
+        padding: 12px 24px;
+        background-color: transparent;
+        border: 1px solid $fontGrey;
+        border-radius: 5px;
+        margin: 0px 10px 10px 0px;
+      }
+
       .review {
+        padding: 10px;
+        border-bottom: 1px solid $fontGrey;
+      }
+
+      ul {
         padding: 10px;
 
         li {
-          padding-top: 15px;
+          margin-bottom: 10px;
         }
       }
 
@@ -91,18 +100,25 @@
     }
   }
 
+  .detailSection {
+    height: 450vh;
+    background-color: aquamarine;
+  }
+
   .dummy {
-    height: 200vh;
+    height: 30vh;
     background-color: rgb(189, 128, 128);
   }
 
   .drawModal {
-    padding: 30px 20px;
+    padding: 100px 100px;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    font-size: 20px;
     border-radius: 20px;
+    background-color: white;
     box-shadow: 4px 4px 6px rgba(117, 117, 117, 0.5);
   }
 }
