--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -4,7 +4,8 @@
   justify-content: space-between;
   align-items: center;
   height: 60px;
-  background-color: white;
+  background-color: #ffffff;
+  overflow: inherit;
 
   .logo {
     margin-left: 30px;
