--- a/src/components/Nav/Sideoption/Search/Search.scss
+++ b/src/components/Nav/Sideoption/Search/Search.scss
@@ -1,75 +1,76 @@
 .searchSection {
   display: flex;
   align-items: center;
-}
+  max-height: max-content;
 
-.dropdownSection {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 500px;
-  transition: 0.2s;
-
-  .searchHeader {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  .dropdownSection {
+    position: absolute;
+    top: 0;
+    right: -100%;
     width: 100%;
-    height: 60px;
-    background-color: white;
+    height: 500px;
+    transition: 0.3s;
 
-    .searchInput {
-      padding-left: 20px;
-      width: 50%;
-      height: 70%;
-      border: none;
-      border-radius: 20px;
-      background-color: #eee;
-      &:hover {
-        background-color: #ddd;
-      }
-      &:active {
-        background-color: #ccc;
-      }
-    }
-  }
-
-  .searchBody {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-    height: 80%;
-    top: 60px;
-    background-color: white;
-
-    .title {
+    .searchHeader {
       display: flex;
+      align-items: center;
       justify-content: center;
-      width: 10%;
-      height: 80%;
-      font-size: 30px;
+      width: 100%;
+      height: 60px;
+      background-color: white;
+
+      .searchInput {
+        padding-left: 20px;
+        width: 50%;
+        height: 70%;
+        border: none;
+        border-radius: 20px;
+        background-color: #eee;
+        &:hover {
+          background-color: #ddd;
+        }
+        &:active {
+          background-color: #ccc;
+        }
+      }
     }
-    .content {
-      width: 80%;
+
+    .searchBody {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      width: 100%;
       height: 80%;
-      font-size: 30px;
-      overflow: auto;
-      white-space: nowrap;
+      top: 60px;
+      background-color: white;
 
-      .searchResult {
-        display: inline-block;
-        margin-top: 30px;
-        margin-left: 40px;
-        width: 200px;
-        height: 260px;
-        background-color: aliceblue;
+      .title {
+        display: flex;
+        justify-content: center;
+        width: 10%;
+        height: 80%;
+        font-size: 30px;
+      }
+      .content {
+        width: 80%;
+        height: 80%;
+        font-size: 30px;
+        overflow: auto;
+        white-space: nowrap;
 
-        .searchImg {
-          margin: 0;
-          width: 100%;
-          height: 70%;
+        .searchResult {
+          display: inline-block;
+          margin-top: 30px;
+          margin-left: 40px;
+          width: 200px;
+          height: 260px;
+          background-color: aliceblue;
+
+          .searchImg {
+            margin: 0;
+            width: 100%;
+            height: 70%;
+          }
         }
       }
     }
