--- a/src/pages/Cart/OrderHistory/OrderHistory.scss
+++ b/src/pages/Cart/OrderHistory/OrderHistory.scss
@@ -4,15 +4,15 @@
   width: 350px;
   margin-top: 60px;
 
-  .text {
+  .orderText {
     margin-top: 20px;
   }
 
-  .payment {
+  .orderPayment {
     margin: 15px;
   }
 
-  .underBorder {
+  .orderUnderBorder {
     border-bottom: 1px solid $fontGrey;
   }
 }
