--- a/src/pages/Cart/WishListData/WishListData.scss
+++ b/src/pages/Cart/WishListData/WishListData.scss
@@ -1,12 +1,34 @@
-.noImg {
-  margin: 20px;
+@import '../../../styles/variables.scss';
 
-  .name {
-    margin: 10px;
+.miniWishDetailInfo {
+  display: flex;
+
+  .miniWishImgBox {
+    display: flex;
+    width: 200px;
+    height: 200px;
+    background-color: black;
   }
-}
 
-.size,
-.cartBtn {
-  margin-top: 10px;
+  .miniWishNoImg {
+    margin-left: 20px;
+    .miniWishRowInfo {
+      display: flex;
+      justify-content: space-between;
+      width: 350px;
+
+      font-size: 25px;
+    }
+
+    .miniWishType {
+      font-size: 20px;
+      color: $fontGrey;
+      margin-top: 10px;
+      margin-bottom: 30px;
+    }
+
+    .miniWishSize {
+      margin-bottom: 20px;
+    }
+  }
 }
