--- a/src/components/Nav/Dropdown/Dropdown.scss
+++ b/src/components/Nav/Dropdown/Dropdown.scss
@@ -4,9 +4,10 @@
   left: 0px;
   width: 100%;
   height: 300px;
-  background-color: white;
+  background-color: #fff;
   transform: translateY(0);
   transition: transform 0.3s;
+  z-index: -1;
 }
 
 .dropDownHidden {
