--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -4,8 +4,9 @@
   justify-content: space-between;
   align-items: center;
   height: 60px;
-  background-color: #ffffff;
+  background-color: #fff;
   overflow: inherit;
+  z-index: 100;
 
   .logo {
     margin-left: 30px;
