--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -12,7 +12,7 @@
     justify-content: center;
     width: 100%;
     height: 80%;
-    background-color: #eee;
+    background-color: #fff;
 
     .contentImg {
       height: 100%;
@@ -25,7 +25,7 @@
     justify-content: space-around;
     align-items: center;
     height: 20%;
-    background-color: #ddd;
+    background-color: #fff;
 
     .title {
       font-size: 36px;
