Modify:멘토님 수정 요청사항 반영

--- a/src/components/Wish/Wish.scss
+++ b/src/components/Wish/Wish.scss
@@ -34,7 +34,7 @@
       background-color: #ffffff;
       color: #111111;
 
-      :disabled {
+      & :disabled {
         opacity: 1;
       }
     }
