--- a/src/pages/DrawPage/Drawpage.scss
+++ b/src/pages/DrawPage/Drawpage.scss
@@ -13,12 +13,17 @@
     background-color: #eee;
 
     .verSection {
+      display: flex;
+      justify-content: space-evenly;
       .verImg {
-        width: 50%;
+        width: 45%;
         height: 70vh;
       }
     }
     .rowImg {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       width: 100%;
       height: 70vh;
 
@@ -79,11 +84,15 @@
   }
 }
 .detailSection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   height: 300vh;
-  background-color: #bbb;
+  background-color: #eee;
 
   img {
-    width: 100%;
+    // width: 100%;
     height: 100vh;
   }
 }
