--- a/src/components/Nav/Sideoption/Sideoption.scss
+++ b/src/components/Nav/Sideoption/Sideoption.scss
@@ -1,5 +1,11 @@
-.sideIcon:hover {
-  background-color: #ccc;
+@import '../../../styles/variables.scss';
+
+.sideIcon {
+  opacity: 1;
   border: none;
-  border-radius: 10px;
+  border-radius: 5px;
+
+  &:hover {
+    background-color: $bgcLightGrey;
+  }
 }
