--- a/src/components/Nav/Dropdown/Snkrsdrop.scss
+++ b/src/components/Nav/Dropdown/Snkrsdrop.scss
@@ -7,14 +7,14 @@
   left: 0px;
   width: 100%;
   height: 300px;
-  background-color: #ccc;
+  background-color: #fff;
+  overflow-y: none;
 }
 
 .snkrsList {
   display: flex;
   width: 80%;
-  height: 80%;
-  background-color: #ddd;
+  height: 90%;
   overflow: scroll;
   overflow: auto;
   white-space: nowrap;
