--- a/src/components/Nav/Sideoption/Search/Search.scss
+++ b/src/components/Nav/Sideoption/Search/Search.scss
@@ -1,3 +1,6 @@
+@import '../../../../styles/variables.scss';
+@import '../../../../styles/mixin.scss';
+
 .searchSection {
   display: flex;
   align-items: center;
@@ -20,24 +23,35 @@
     background-color: white;
 
     .searchInput {
-      padding-left: 20px;
+      padding-left: 25px;
       width: 50%;
       height: 70%;
+      font-size: 16px;
       border: none;
       border-radius: 20px;
-      background-color: #eee;
-      &:hover {
-        background-color: #ddd;
+      background-color: $inputBg;
+
+      .searchInput:focus {
+        outline: none;
       }
+
+      &:hover {
+        cursor: pointer;
+        background-color: #eee;
+        border: 1px solid $btnColor;
+      }
+
       &:active {
-        background-color: #ccc;
+        cursor: pointer;
+        background-color: #eee;
+        border: 1px solid $btnColor;
       }
     }
   }
 
   .searchBody {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 80%;
@@ -47,16 +61,21 @@
     .title {
       display: flex;
       justify-content: center;
-      width: 10%;
+      width: 30%;
       height: 80%;
-      font-size: 30px;
+      padding-left: 100px;
+      color: $fontGrey;
+      opacity: 0.5;
+      font-size: 22px;
+      font-weight: 900;
     }
     .content {
-      width: 80%;
+      width: 90%;
       height: 80%;
       font-size: 30px;
       overflow: auto;
       white-space: nowrap;
+      font-size: 20px;
 
       .searchResult {
         display: inline-block;
