--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -1,38 +1,62 @@
+@import '../../styles/mixin.scss';
+@import '../../styles/variables.scss';
+
 .firstPage {
   height: 100vh;
-  background-color: burlywood;
+  overflow: hidden;
+  margin-bottom: 200px;
+
+  img {
+    width: 100%;
+  }
 }
 
 .content {
-  height: 100vh;
-  background-color: rgb(97, 97, 63);
+  height: 180vh;
 
   .imgBox {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 80%;
-    background-color: cadetblue;
+    width: 1200px;
+    height: 600px;
+    margin: 0 auto;
+    overflow: hidden;
 
     .contentImg {
-      height: 100%;
+      width: 100%;
     }
   }
 
   .textBox {
-    display: flex;
+    height: 400px;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    height: 20%;
-    background-color: bisque;
+    line-height: 90px;
+    text-align: center;
 
     .title {
-      font-size: 36px;
-      font-weight: 700;
+      margin-top: 50px;
+      font-size: 50px;
+      font-weight: 900;
     }
     .text {
-      font-size: 24px;
+      font-size: 22px;
+      line-height: 36px;
+      margin-bottom: 15px;
+    }
+
+    .btnBox {
+      width: 450px;
+      justify-content: space-between;
+
+      button {
+        width: 170px;
+        margin-right: 15px;
+        @include btnStyle;
+
+        &:hover {
+          opacity: 1;
+        }
+      }
     }
   }
 }
