--- a/src/pages/ProductList/ProductList.scss
+++ b/src/pages/ProductList/ProductList.scss
@@ -1,11 +1,12 @@
 .productList {
-  padding: 0px 100px;
+  padding: 0px 70px;
   justify-content: space-between;
 
   .subTitle {
-    height: 90px;
-    font-size: 30px;
-    line-height: 60px;
+    height: 120px;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 120px;
   }
 
   .listBox {
