--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -2,17 +2,26 @@
 @import '../../styles/variables.scss';
 
 .firstPage {
+  width: 100%;
   height: 100vh;
+  padding: 130px 70px;
+  object-fit: cover;
   overflow: hidden;
   margin-bottom: 200px;
+  background-image: url(../../assets/images/main_thumnail.jpg);
 
-  img {
-    width: 100%;
+  p {
+    font-size: 70px;
+    font-weight: 900;
+  }
+
+  .alignSlogan {
+    line-height: 120px;
   }
 }
 
 .content {
-  height: 150vh;
+  height: 140vh;
 
   .imgBox {
     width: 1300px;
@@ -26,7 +35,7 @@
   }
 
   .textBox {
-    height: 400px;
+    height: 350px;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
@@ -46,17 +55,12 @@
       margin-bottom: 10px;
     }
 
-    .btnBox {
-      width: 450px;
-      justify-content: space-between;
+    button {
+      width: 200px;
+      @include btnStyle;
 
-      button {
-        width: 200px;
-        @include btnStyle;
-
-        &:hover {
-          opacity: 1;
-        }
+      &:hover {
+        opacity: 1;
       }
     }
   }
