--- a/src/components/AsideMenu/AsideMenu.scss
+++ b/src/components/AsideMenu/AsideMenu.scss
@@ -54,5 +54,9 @@
       overflow: hidden;
       transition: max-height ease-out 1.2s 0s;
     }
+
+    .asibeMenuCheckbox {
+      display: block;
+    }
   }
 }
