--- a/src/pages/Cart/Cart/Cart.scss
+++ b/src/pages/Cart/Cart/Cart.scss
@@ -3,42 +3,41 @@
 .cart {
   justify-content: space-between;
   display: flex;
-  width: 1500px;
-  margin: auto;
 
   .mainContainer {
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     display: flex;
 
     .main {
       justify-content: space-between;
       display: flex;
-      width: 80vw;
+
       margin: auto;
 
       .cartItemContainer {
         margin: 40px;
       }
-    }
-
-    .cartWishList {
-      width: 1200px;
-      margin-left: 150px;
-
-      .cartWishListLink {
-        margin-top: 30px;
-        text-decoration: underline;
+      .moreList {
         margin-left: 20px;
       }
     }
-
     .cartTitle {
       font-size: 40px;
       margin: 20px;
     }
+    .cartWishList {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      width: 1200px;
+      margin-left: 150px;
+    }
   }
   .miniWishUnderLine {
-    margin-top: 30px;
-    border-bottom: 2px solid #757575;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-bottom: 2px solid #bbb;
   }
 }
