--- a/src/pages/Cart/MoreProductList/MoreProductList.scss
+++ b/src/pages/Cart/MoreProductList/MoreProductList.scss
@@ -1,6 +1,7 @@
 .moreProductList {
   width: 95vw;
-
+  margin-left: 20px;
+  margin-bottom: 30px;
   display: flex;
   overflow: scroll;
   overflow-y: hidden;
