--- a/src/pages/Cart/OrderHistory/OrderHistory.scss
+++ b/src/pages/Cart/OrderHistory/OrderHistory.scss
@@ -1,8 +1,11 @@
 @import '../../../styles/variables.scss';
 
 .orderHistory {
+  position: sticky;
+  top: 0;
   width: 350px;
   margin-top: 60px;
+  z-index: -1;
 
   .orderText {
     margin-top: 20px;
@@ -14,5 +17,15 @@
 
   .orderUnderBorder {
     border-bottom: 1px solid $fontGrey;
+  }
+
+  .order {
+    margin-top: 5px;
+    width: 200px;
+    height: 50px;
+    border-radius: 25px;
+    border: none;
+    color: #eee;
+    background-color: #555;
   }
 }
