--- a/src/pages/Cart/WishListData/WishListData.scss
+++ b/src/pages/Cart/WishListData/WishListData.scss
@@ -11,10 +11,13 @@
   }
 
   .miniWishNoImg {
+    padding-left: 20px;
     margin-left: 20px;
+
     .miniWishRowInfo {
+      margin-left: -20px;
       display: flex;
-      justify-content: space-between;
+      justify-content: space-around;
       width: 350px;
 
       font-size: 25px;
@@ -29,6 +32,14 @@
 
     .miniWishSize {
       margin-bottom: 20px;
+    }
+    .miniWishBtn {
+      width: 30px;
+      height: 30px;
+      border: none;
+      background-image: url('../../../assets/images/shoppingCart.png');
+      background-size: cover;
+      background-color: transparent;
     }
   }
 }
