--- a/src/pages/ProductDetail/ProductDetail.scss
+++ b/src/pages/ProductDetail/ProductDetail.scss
@@ -7,11 +7,11 @@
   .container {
     display: flex;
     justify-content: center;
-    height: 200vh;
+    height: 160vh;
 
     .imgSection {
       width: 60%;
-      height: 100vh;
+      height: 70vh;
 
       .imgBox {
         width: 90%;
@@ -56,13 +56,16 @@
       }
 
       p {
-        font-size: 16px;
-        margin: 25px 0px;
+        font-size: 20px;
+        margin: 30px 0px;
       }
 
-      .bold {
-        font-size: 18px;
+      .boldTitle {
+        font-size: 20px;
         font-weight: 700;
+        padding: 10px 10px;
+        border-bottom: 1px solid $fontGrey;
+        margin-bottom: 15px;
       }
 
       .sizeBtn {
@@ -72,21 +75,37 @@
         border: 1px solid $fontGrey;
         border-radius: 5px;
         margin: 0px 10px 10px 0px;
+
+        &:hover {
+          background-color: $bgcLightGrey;
+        }
       }
 
       .review {
         padding: 10px;
-        border-bottom: 1px solid $fontGrey;
+        transition: all 1s;
+        font-size: 20px;
 
-        ul {
-          width: 100%;
+        &.open {
+          max-height: 100px;
+        }
+
+        &.close {
+          max-height: 0px;
+          overflow: hidden;
         }
       }
 
-      ul {
-        padding: 10px;
+      li {
+        padding: 5px 5px 10px;
+        font-size: 16px;
 
-        li {
+        &.reviewTitle {
+          color: $fontGrey;
+          font-size: 14px;
+        }
+
+        &.reviewText {
           margin-bottom: 10px;
         }
       }
@@ -107,7 +126,8 @@
         top: 30px;
         margin-top: 5%;
         width: 100%;
-        height: 50vh;
+        height: 60vh;
+        overflow: hidden;
 
         p {
           font-size: 16px;
