--- a/src/components/Nav/Dropdown/Snkrsitem.scss
+++ b/src/components/Nav/Dropdown/Snkrsitem.scss
@@ -2,11 +2,36 @@
   width: 150px;
   margin-left: 100px;
 
-  img {
-    width: 100%;
+  .eventSection {
+    position: relative;
+    width: 150px;
+    height: 200px;
+
+    img {
+      width: 100%;
+    }
+    .textSection {
+      width: 150px;
+      position: absolute;
+      top: 0;
+      background-color: black;
+      opacity: 0.8;
+      transition: 0.3s;
+
+      p {
+        text-align: center;
+        margin-top: 40px;
+        color: #eee;
+      }
+    }
   }
 
   p {
     font-size: 14px;
+    line-height: 20px;
+  }
+
+  .bold {
+    font-weight: 900;
   }
 }
