Modify: dropdown position: absolute -> position: fixed로 수정완료

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -75,3 +75,18 @@
     border: 1px solid $btnColor;
   }
 }
+
+@media (max-width: 1200px) {
+  .searchSection {
+    display: none;
+  }
+  // .sideOption {
+  //   display: none;
+  // }
+}
+
+@media (max-width: 880px) {
+  .sideOption {
+    display: none;
+  }
+}
