--- a/src/components/Nav/Sideoption/Search/Search.scss
+++ b/src/components/Nav/Sideoption/Search/Search.scss
@@ -18,7 +18,9 @@
 }
 
 .dropdownSection {
-  position: absolute;
+  // TODO : 질문사항
+  // position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
