--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -3,7 +3,7 @@
 
 .firstPage {
   width: 100%;
-  height: 100vh;
+  height: 1000px;
   padding: 130px 70px;
   object-fit: cover;
   overflow: hidden;
@@ -26,7 +26,7 @@
 }
 
 .content {
-  height: 140vh;
+  height: 1100px;
 
   .imgBox {
     width: 1300px;
