--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -1,10 +1,8 @@
 @import '../../styles/mixin.scss';
 @import '../../styles/variables.scss';
 
-.product {
+.eactProduct {
   @include productBoxSize;
-  width: 100%;
-  height: 300px;
   padding: 0px 25px;
 
   .imgBox {
