--- a/src/pages/ProductDetail/ProductDetail.scss
+++ b/src/pages/ProductDetail/ProductDetail.scss
@@ -4,7 +4,7 @@
 .productDetail {
   position: relative;
 
-  .container {
+  .productContainer {
     display: flex;
     justify-content: center;
     height: 100vh;
@@ -18,32 +18,41 @@
       .imgBox {
         width: 90%;
 
+        div {
+          width: 100%;
+          height: 500px;
+        }
+
         .wrapperImgBox {
           width: 100%;
           display: flex;
-          justify-content: space-between;
-        }
 
-        li {
-          width: 100%;
-          padding: 10px;
-          height: 50%;
-          overflow: hidden;
+          li {
+            padding: 10px;
+            height: 50%;
+            overflow: hidden;
 
-          img {
-            object-fit: cover;
+            img {
+              width: 100%;
+              object-fit: cover;
+            }
           }
 
-          .bottomImg{
+          .bottomImg {
             width: 95%;
-            height: 400px;
+            height: 500px;
           }
         }
 
         .rowImg {
-          display: flex;
-          justify-content: center;
-          margin-top: 10px;
+          height: 600px;
+          padding: 10px;
+          width: 100%;
+          overflow: hidden;
+
+          img {
+            width: 100%;
+          }
         }
       }
     }
@@ -84,8 +93,13 @@
         border-radius: 5px;
         margin: 0px 10px 10px 0px;
 
-        &.active:hover {
+        &:hover {
           background-color: $bgcLightGrey;
+        }
+
+        &.selected {
+          background-color: $btnColor;
+          color: white;
         }
       }
 
@@ -145,13 +159,13 @@
     }
   }
 
-  .detailSection {
-    margin: 0 auto;
+  .productDetailSection {
+    margin: 150px auto;
 
     .concept {
       width: 1000px;
       height: 600px;
-      margin: 30px auto;
+      margin: 120px auto;
       overflow: hidden;
 
       img {
