Modify: 리뷰사항 적용 완료

--- a/src/components/Nav/Dropdown/Snkrsitem.scss
+++ b/src/components/Nav/Dropdown/Snkrsitem.scss
@@ -5,7 +5,7 @@
   .eventSection {
     position: relative;
     width: 150px;
-    height: 200px;
+    height: 180px;
 
     img {
       width: 100%;
@@ -14,15 +14,21 @@
       width: 150px;
       position: absolute;
       top: 0;
-      background-color: black;
-      opacity: 0.8;
-      transition: 0.3s;
+      background-color: rgba(black, 60%);
+      transition: all 0.2s;
+      visibility: collapse;
+      height: 0;
 
       p {
         text-align: center;
         margin-top: 20px;
         font-size: 14px;
         color: #eee;
+      }
+
+      &.show {
+        visibility: visible;
+        height: 100%;
       }
     }
   }
