검색기능 구현

--- a/src/components/Nav/Sideoption/Search/Search.scss
+++ b/src/components/Nav/Sideoption/Search/Search.scss
@@ -3,6 +3,15 @@
   align-items: center;
 }
 
+.searchBtn {
+  width: 25px;
+  height: 25px;
+  border: none;
+  background-image: url('../../../../assets/images/likeClick.png');
+  background-size: cover;
+  background-color: transparent;
+}
+
 .dropdownSection {
   position: absolute;
   top: 0;
