데이터 통신 확인

--- a/src/components/Nav/Sideoption/Search/Search.scss
+++ b/src/components/Nav/Sideoption/Search/Search.scss
@@ -18,12 +18,17 @@
 }
 
 .searchBtn {
-  width: 25px;
-  height: 25px;
+  width: 35px;
+  height: 35px;
   border: none;
-  background-image: url('../../../../assets/images/likeClick.png');
+  background-image: url('../../../../assets/images/search.png');
   background-size: cover;
   background-color: transparent;
+
+  &:hover {
+    background-color: rgba(117, 117, 117, 0.2);
+    border-radius: 20px;
+  }
 }
 
 .dropdownSection {
