--- a/src/pages/ProductDetail/ProductDetail.scss
+++ b/src/pages/ProductDetail/ProductDetail.scss
@@ -15,6 +15,11 @@
       width: 60%;
       height: 100vh;
 
+      .productDetailImg {
+        width: 300px;
+        height: 300px;
+      }
+
       .imgBox {
         width: 90%;
 
